# cassandra-medusa

./: .bumpversion.cfg  .coveragerc  .dockerignore  .fossa.yml  .gitignore  .gitlab-ci.yml  BUILD_TEST_DOCKER.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.k8s  MANIFEST.in  NOTICE  Owners.txt  README.md  VERSION  codecov.yml  medusa-example.ini  patch.py  patch_test.py  pyproject.toml  requirements-azure.txt  requirements-gcs.txt  requirements-grpc-runtime.txt  requirements-grpc.txt  requirements-s3.txt  requirements-test.txt  requirements.txt  run_integration_tests.sh  setup.py  test  test-medusa.ini  test_file.txt  test_raw.py  test_raw2.py  test_raw3.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  license-check.yml  publish.yml  pythonapp.yml
debian/: cassandra-medusa.dirs  cassandra-medusa.install  cassandra-medusa.links  cassandra-medusa.lintian-overrides  changelog  control  copyright  rules
docs/: Configuration.md  Installation.md  Performing-backups.md  Restoring-a-full-cluster.md  Restoring-a-single-node.md  Testing.md  Usage.md  aws_s3_setup.md  azure_blobs_setup.md  ceph_s3_setup.md  client_side_encryption.md  design.md  dev-setup.md  development.md  gcs_setup.md  ibm_cloud_setup.md  minio_setup.md  permissions-setup.md
k8s/: Dockerfile  Dockerfile-azure  Dockerfile-gcs  Dockerfile-s3  Dockerfile.ubuntu  README.md  clean-cloud-sdk.sh  docker-entrypoint.sh  medusa.sh
medusa/: backup.py  backup_cluster.py  backup_manager.py  backup_node.py  cassandra_utils.py  config.py  download.py  ecdh.py  fetch_tokenmap.py  filtering.py  host_man.py  index.py  listing.py  medusacli.py  nodetool.py  novatool.py  orchestration.py  purge.py  purge_decommissioned.py  report_latest.py  restore_cluster.py  restore_node.py  status.py  utils.py  verify.py  verify_restore.py
medusa/monitoring/: __init__.py  abstract.py  dogstatsd.py  noop.py
medusa/network/: __init__.py  hostname_resolver.py
medusa/scripts/: medusa-wrapper.sh  medusa_wrapper.py
medusa/service/: __init__.py
medusa/service/grpc/: __init__.py  client.py  medusa.proto  medusa_pb2.py  medusa_pb2_grpc.py  restore.py  server.py
medusa/service/grpc_svc/: client.py  medusa.proto  medusa_pb2.py  medusa_pb2_grpc.py  restore.py  server.py
medusa/service/snapshot/: __init__.py  abstract_snapshot_service.py  ccm_snapshot_service.py  jolokia_snapshot_service.py  managementAPISnapshotService.py  management_api_snapshot_service.py  nodetool_snapshot_service.py
medusa/storage/: __init__.py  abstract_storage.py  azure_storage.py  cluster_backup.py  concurrent.py  encryption.py  google_storage.py  ibm_storage.py  local_storage.py  minio_storage.py  node_backup.py  s3_base_storage.py  s3_compat.py  s3_compatible_storage.py  s3_rgw.py  s3_storage.py  storage_provider.py  upload.py
medusa/storage/aws_s3_storage/: awscli.py  concurrent.py
medusa/storage/azure_blobs_storage/: azcli.py  azcopy.py  concurrent.py
medusa/storage/google_cloud_storage/: gsutil.py
medusa/storage/ibm_cloud_storage/: awscli.py  concurrent.py
medusa/storage/minio_s3_storage/: awscli.py  concurrent.py
medusa/storage/s3_compat_storage/: awscli.py  concurrent.py
packaging/: build-deb.sh  release.sh
packaging/docker-build/: Dockerfile  Dockerfile-debian  Dockerfile-debian-11  Dockerfile-debian-11-tester  Dockerfile-debian-12  Dockerfile-py36  Dockerfile-release  Dockerfile-tester  Dockerfile-ubuntu  Dockerfile-ubuntu-tester  docker-compose.yml  docker-entrypoint-release.sh  docker-entrypoint-test.sh  docker-entrypoint.sh
packaging/docker-build/scripts/: pre-build.sh
tests/: backup_cluster_test.py  backup_man_test.py  backup_node_test.py  backup_test.py  cassandra_utils_test.py  concurrent_test.py  config_test.py  download_test.py  filtering_test.py  host_man_test.py  list_backups_json_test.py  orchestration_test.py  purge_decommissioned_test.py  purge_test.py  restore_cluster_test.py  restore_node_test.py  schema_test.py  server_test.py  status_json_test.py  storage_test.py  storage_test_with_prefix.py  utils_test.py
tests/integration/features/: __init__.py  environment.py  integration_tests.feature
tests/network/: hostname_resolver_test.py
tests/resources/: restore_cluster_host_list.txt  restore_cluster_tokenmap.fail_tokens.json  restore_cluster_tokenmap.json  restore_cluster_tokenmap.one_changed.json  restore_cluster_tokenmap.target.json  restore_cluster_tokenmap.target_match_racks.json  restore_cluster_tokenmap_ignore_racks.json  restore_cluster_tokenmap_ignore_racks.target.json  restore_cluster_tokenmap_ignore_racks_fail.json  restore_cluster_tokenmap_match_racks.fail.json  restore_cluster_tokenmap_match_racks.json  restore_cluster_tokenmap_vnodes.json  restore_cluster_tokenmap_vnodes_target_fail.json  restore_cluster_tokenmap_vnodes_target_ok.json  restore_node_tokenmap.json  restore_node_tokenmap_vnodes.json  restore_node_tokenmap_with_dc.json  schema.cql
tests/resources/config/: cassandra.yaml  medusa-azure_blobs.ini  medusa-azure_blobs_cse.ini  medusa-google_storage.ini  medusa-google_storage_cse.ini  medusa-ibm_storage.ini  medusa-ibm_storage_cse.ini  medusa-kubernetes.ini  medusa-local-dse.ini  medusa-local.ini  medusa-minio-encrypted.ini  (+9 more)
tests/storage/: abstract_storage_test.py  awscli_test.py  azure_concurrent_test.py  azure_storage_test.py  encrypted_storage_test.py  encryption_test.py  google_storage_test.py  manifest_aggregation_test.py  s3_compat_concurrent_test.py  s3_concurrent_test.py  s3_storage_test.py  test_encryption_stream.py
(+48 files in other folders)
